# auto-ads-parser

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
client/: README.md  package-lock.json  package.json  quasar.conf.js  quasar.extensions.json
client/src/: App.vue  index.template.html
client/src-cordova/: config.xml  package-lock.json  package.json
client/src/components/: AdItem.vue  AdItemSpecial.vue  AdList.vue  AdListSpecial.vue
client/src/css/: app.scss  quasar.variables.scss
client/src/helpers/: notify.js
client/src/layouts/: MainLayout.vue
client/src/pages/: About.vue  Ads.vue  Charts.vue  Favorite.vue  Ignore.vue  Index.vue  Settings.vue
client/src/router/: routes.js
client/src/store/: index.js
cmake/dependencies/: gumbo-query.cmake  restclient-cpp.cmake  restinio.cmake  spdlog.cmake
server/: .dockerignore  CMakeLists.txt  README.md
server/cmake/: Utils.cmake
server/cmake/dependencies/: fmtlib.cmake  nlohmann-json.cmake  restinio.cmake
server/common/src/: CMakeLists.txt  SignalHandler.cpp
server/common/src/include/: log.h
server/common/src/parser/: AutoruPageInfoParser.cpp  AvitoPageInfoParser.cpp  WebSiteParser.cpp
server/common/src/parser/include/: AutoruPageInfoParser.h  CurlTransport.h  IWebPageInfoParser.h  IWebSiteTransport.h  ParserRunner.h
server/docker/master/: Dockerfile
server/docker/slave/: Dockerfile
server/example/: config.json
server/master/example/: config.json
server/master/src/: Application.cpp  CMakeLists.txt
server/master/src/include/: AppConfig.h  Application.h  IAppConfig.h
server/slave/example/: config.json
server/slave/src/: AppConfig.cpp  Application.cpp  CMakeLists.txt  main.cpp
server/slave/src/include/: AppConfig.h  Application.h  IAppConfig.h
server/src/app/: Application.cpp  SignalHandler.cpp
server/src/common/: log.h
server/src/config/: AppConfig.cpp
server/src/config/include/: IAppConfig.h
server/src/parser/: AutoruPageInfoParser.cpp  AvitoPageInfoParser.cpp
src/: AutoruParser.cpp  AvitoParser.cpp  CMakeLists.txt  main.cpp
src/app/: Application.cpp
src/app/include/: Application.h  SignalHandler.h
src/common/: log.h  utils.h
src/config/: AppConfig.cpp
src/config/include/: AppConfig.h  IAppConfig.h
src/include/: Ad.h  AutoruParser.h  AvitoParser.h  IParser.h  log.h  utils.h
src/parser/: AutoruPageInfoParser.cpp  AvitoPageInfoParser.cpp  WebSiteParser.cpp
src/parser/include/: Ad.h  AutoruPageInfoParser.h  AvitoPageInfoParser.h  CurlTransport.h  IParser.h  IWebPageInfoParser.h  IWebSiteTransport.h  WebSiteParser.h
